// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadFilesPage expect to render with breadcrumb and showing rootLink 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumb
      aria-label="Breadcrumb"
      className=""
      style={
        Object {
          "marginLeft": "calc(var(--pf-c-content--ol--MarginLeft) * -1 * 2)",
        }
      }
    >
      <BreadcrumbItem
        className=""
        component="a"
        isActive={false}
        onClick={[Function]}
        target={null}
        to="#"
      >
        Reports
      </BreadcrumbItem>
      <BreadcrumbItem
        className=""
        component="a"
        isActive={true}
        style={
          Object {
            "marginTop": 0,
          }
        }
        target={null}
        to={null}
      >
        My title
      </BreadcrumbItem>
    </Breadcrumb>
    <PageHeaderTitle
      title="My title"
    />
  </PageHeader>
  <Connect(Main)>
    children
  </Connect(Main)>
</Fragment>
`;

exports[`UploadFilesPage expect to render with breadcrumb and without showing rootLink 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumb
      aria-label="Breadcrumb"
      className=""
      style={
        Object {
          "marginLeft": "calc(var(--pf-c-content--ol--MarginLeft) * -1 * 2)",
        }
      }
    >
      <BreadcrumbItem
        className=""
        component="a"
        isActive={true}
        style={
          Object {
            "marginTop": 0,
          }
        }
        target={null}
        to={null}
      >
        My title
      </BreadcrumbItem>
    </Breadcrumb>
    <PageHeaderTitle
      title="My title"
    />
  </PageHeader>
  <Connect(Main)>
    children
  </Connect(Main)>
</Fragment>
`;

exports[`UploadFilesPage expect to render without breadcrumb 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="My title"
    />
  </PageHeader>
  <Connect(Main)>
    children
  </Connect(Main)>
</Fragment>
`;
